# On_Board

./: .cursorrules  .gitignore  AGENT_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Mem_MCP_v1.code-workspace  README.md  RELEASE_NOTES.md  RELEASE_v1.9.0.md  SECURITY.md  SKILL.md  dashboard.py  dashboard_live.py  doctor.sh  index.html  lhm.plugin.json  onboard-server.sh  onboard_server.py  pyproject.toml  run-dashboard.sh  server.py  setup-project.sh  update.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
configs/: binary-mcp.json  claude-code-settings.json  codex-hooks.json  cursor-hooks.json  cursor-mcp.json  local-venv-mcp.json  uv-mcp.json  uv-run-mcp.json
docs/: A2A.md  SETUP.md  TOOLS.md
hooks/: claude-code-session-start.sh  claude-code-stop.sh  codex-session-start.sh  codex-stop.sh  cursor-session-end.sh  cursor-session-start.sh  onboard-mini-brief.py
skills/memory-digest-thrift/: SKILL.md
templates/: agent-rules.md
tests/: test_dashboard_live.py  test_docs_protocol.py  test_server_workflows.py  test_setup_integration.py
