[project]
name = "onboard-memory-mcp"
version = "1.9.1"
description = "On Board — Cross-platform shared memory MCP for multi-agent project coordination. One project, one memory, every platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
