[project]
name = "onboard-memory-mcp"
version = "3.7.1"
description = "On Board — Cross-platform shared memory MCP for multi-agent project coordination. One project, one memory, every platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
onboard-memory-mcp = "server:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
